--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,89 @@
+appnope==0.1.4
+asttokens==2.4.1
+attrs==23.2.0
+branca==0.7.2
+bump2version==1.0.1
 certifi==2024.2.2
-cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
 colorama==0.4.6
-cryptography==42.0.7
-Deprecated==1.2.14
-idna==3.7
-iniconfig==2.0.0
+comm==0.2.2
+contourpy==1.2.0
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+distlib==0.3.8
+docutils==0.21.2
+executing==2.0.1
+filelock==3.14.0
+fiona==1.9.6
+folium==0.16.0
+fonttools==4.49.0
+geographiclib==2.0
+geopandas==0.14.4
+geopy==2.4.1
+idna==3.6
+importlib_metadata==7.1.0
+ipykernel==6.29.3
+ipython==8.22.2
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+jedi==0.19.1
+Jinja2==3.1.4
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+keyring==25.2.1
+kiwisolver==1.4.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.3
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+more-itertools==10.2.0
+nest-asyncio==1.6.0
+networkx==3.2.1
+nh3==0.2.17
+numpy==1.26.4
 packaging==24.0
-pluggy==1.5.0
-pycparser==2.22
-PyGithub==2.3.0
-PyJWT==2.8.0
-PyNaCl==1.5.0
-pytest==8.2.1
-pytest-mock==3.14.0
+pandas==2.2.1
+parso==0.8.3
+pexpect==4.9.0
+pillow==10.2.0
+pkginfo==1.10.0
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
+pyparsing==3.1.2
+pyproj==3.6.1
+python-dateutil==2.9.0.post0
+python-louvain==0.16
+pytz==2024.1
+pywin32==306
+pywin32-ctypes==0.2.2
+pyzmq==25.1.2
+readme_renderer==43.0
 requests==2.31.0
-requests-mock==1.12.1
-# Editable install with no version control (tempclone==0.1.0)
--e c:\users\mathe\repositories\test-cli
-typing_extensions==4.11.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.1
+setuptools==69.5.1
+shapely==2.0.4
+six==1.16.0
+stack-data==0.6.3
+tempclone==1.0.0
+tornado==6.4
+traitlets==5.14.2
+twine==5.1.0
+tzdata==2024.1
 urllib3==2.2.1
-wrapt==1.16.0
+virtualenv==20.26.1
+wcwidth==0.2.13
+wheel==0.43.0
+xyzservices==2024.4.0
+zipp==3.18.2
