--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,11 +22,19 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
+          pip install -r requirements.txt  # Instala dependências listadas no requirements.txt
+
+      - name: Run tests
+        run: |
+          pip install pytest
+          pytest
 
       - name: Build package
+        if: success()
         run: python setup.py sdist bdist_wheel
 
       - name: Publish package
+        if: success()
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
