--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,8 @@ geopandas==0.14.4
 geopy==2.4.1
 idna==3.6
 importlib_metadata==7.1.0
+ipython==7.23.1
 ipykernel==6.29.3
-ipython==7.16.1
 jaraco.classes==3.4.0
 jaraco.context==5.3.0
 jaraco.functools==4.0.1
@@ -69,6 +69,7 @@ pywin32-ctypes==0.2.2
 pyzmq==25.1.2
 readme_renderer==43.0
 requests==2.31.0
+requests-mock==1.12.1
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==13.7.1
